--- a/client/src/app/auth/signup/signup.component.html
+++ b/client/src/app/auth/signup/signup.component.html
@@ -7,7 +7,7 @@
           <input type="text" placeholder="email" matInput formControlName="email" />
         </mat-form-field>
         <mat-form-field>
-          <input type="text" placeholder="nom" matInput formControlName="nom" />
+          <input type="text" placeholder="nom" matInput formControlName="name" />
         </mat-form-field>
         <mat-form-field>
           <input type="password" placeholder="mot de passe" matInput formControlName="password" />
