--- a/client/src/app/shared/components/topbar/topbar.component.html
+++ b/client/src/app/shared/components/topbar/topbar.component.html
@@ -1,6 +1,12 @@
-<mat-toolbar fxLayoutGap="15px">
+<mat-toolbar fxLayoutGap="15px" color="primary">
   <span class="link" routerLink="/"> Mon Logo </span>
   <span fxFlex="auto"></span>
-  <span class="link" routerLink="/signin">Connexion</span>
-  <span class="link" routerLink="/signup">Inscription</span>
+  <span *ngIf="!jwtToken.isAuthenticated" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="15px">
+    <span class="link" routerLink="/signin">Connexion</span>
+    <span class="link" routerLink="/signup">Inscription</span>
+  </span>
+  <span *ngIf="jwtToken.isAuthenticated" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="15px">
+    <span class="link" routerLink="/profile">Profile</span>
+    <mat-icon  class="link" (click)="logout()">power_settings_new</mat-icon>
+  </span>
 </mat-toolbar>
