--- a/client/src/app/components/signin/signin.component.html
+++ b/client/src/app/components/signin/signin.component.html
@@ -9,7 +9,7 @@
         <mat-form-field>
           <input type="password" placeholder="mot de passe" matInput formControlName="password" />
         </mat-form-field>
-        <div *ngIf="error">{{ error }}</div>
+        <div *ngIf="error$ | async; let error">{{ error }}</div>
         <button mat-raised-button color="primary" (click)="submit()">Connexion</button>
       </form>
     </mat-card-content>
