--- a/client/src/app/components/signup/signup.component.html
+++ b/client/src/app/components/signup/signup.component.html
@@ -12,6 +12,7 @@
         <mat-form-field>
           <input type="password" placeholder="mot de passe" matInput formControlName="password" />
         </mat-form-field>
+        <div *ngIf="error$ | async; let error">{{ error }}</div>  
         <button mat-raised-button color="primary" (click)="submit()">Connexion</button>
       </form>
     </mat-card-content>
