photos store & search

--- a/client/src/app/shared/components/topbar/topbar.component.html
+++ b/client/src/app/shared/components/topbar/topbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar fxLayoutGap="15px" color="primary">
   <span class="link" routerLink="/"> Mon Logo </span>
-  <span fxFlex="auto"></span>
+  <input type="text" fxFlex="auto" (keyup)="applyFilter($event.target.value)" />
   <span *ngIf="!(isLoggedIn$ | async)" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="15px">
     <span class="link" routerLink="/signin">Connexion</span>
     <span class="link" routerLink="/signup">Inscription</span>
