use unsplash api with ngrx

--- a/client/src/app/photos/photos.component.html
+++ b/client/src/app/photos/photos.component.html
@@ -1,3 +1,4 @@
-<p>
-  photos works!
-</p>
+<div style="margin-top:60px" fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="15px">
+  <img *ngFor="let photo of photos$ | async" [src]="photo.url"/>
+
+</div>
